src/OpenCvSharpExtern/ximgproc_FastLineDetector.h

#pragma once

#ifndef NO_CONTRIB

// ReSharper disable IdentifierTypo
// ReSharper disable CppInconsistentNaming
// ReSharper disable CppNonInlineFunctionDefinitionInHeaderFile

#include "include_opencv.h"

CVAPI(ExceptionStatus) ximgproc_Ptr_FastLineDetector_delete(cv::Ptr<cv::ximgproc::FastLineDetector> *obj)
{
    return cvTry([&] {
        delete obj;
    });
}

CVAPI(ExceptionStatus) ximgproc_Ptr_FastLineDetector_get(cv::Ptr<cv::ximgproc::FastLineDetector> *ptr, cv::ximgproc::FastLineDetector **returnValue)
{
    return cvTry([&] {
        *returnValue = ptr->get();
    });
}

CVAPI(ExceptionStatus) ximgproc_FastLineDetector_detect_OutputArray(
    cv::ximgproc::FastLineDetector *obj,
    const interop::InputArrayProxy* image,
    const interop::OutputArrayProxy* lines)
{
    return cvTry([&] {
        obj->detect(InProxy(*image), OutProxy(*lines));
    });
}

CVAPI(ExceptionStatus) ximgproc_FastLineDetector_detect_vector(
    cv::ximgproc::FastLineDetector *obj,
    const interop::InputArrayProxy* image,
    std::vector<cv::Vec4f> *lines)
{
    return cvTry([&] {
        obj->detect(InProxy(*image), *lines);
    });
}

CVAPI(ExceptionStatus) ximgproc_FastLineDetector_drawSegments_InputArray(
    cv::ximgproc::FastLineDetector *obj,
    const interop::InputOutputArrayProxy* image,
    const interop::InputArrayProxy* lines,
    int draw_arrow)
{
    return cvTry([&] {
        obj->drawSegments(IoProxy(*image), InProxy(*lines), draw_arrow != 0);
    });
}

CVAPI(ExceptionStatus) ximgproc_FastLineDetector_drawSegments_vector(
    cv::ximgproc::FastLineDetector *obj,
    const interop::InputOutputArrayProxy* image,
    std::vector<cv::Vec4f> *lines,
    int draw_arrow)
{
    return cvTry([&] {
        obj->drawSegments(IoProxy(*image), *lines, draw_arrow != 0);
    });
}


CVAPI(ExceptionStatus) ximgproc_createFastLineDetector(
    int length_threshold,
    float distance_threshold,
    double canny_th1,
    double canny_th2,
    int canny_aperture_size,
    int do_merge,
    cv::Ptr<cv::ximgproc::FastLineDetector> **returnValue)
{
    return cvTry([&] {
        const auto ptr = cv::ximgproc::createFastLineDetector(
            length_threshold, distance_threshold, canny_th1, canny_th2, canny_aperture_size, do_merge != 0);
        *returnValue = new cv::Ptr<cv::ximgproc::FastLineDetector>(ptr);
    });
}

#endif // NO_CONTRIB